<resources>
    <string name="app_name">CotracosanApps</string>
    <string name="navigation_drawer_open">Abrir Navegación</string>
    <string name="navigation_drawer_close">Cerrar Navegación</string>
    <string name="nav_header_title">Cotracosan</string>
    <string name="nav_header_desc">Cabecera navegación</string>
    <string name="action_settings">Ajustes</string>
    <string name="txtCredito">Creditos</string>
    <string name="txtAbonos">Abonos</string>
    <string name="txtBuses">Buses</string>
    <string name="txtCuenta">Configuración</string>
    <string name="txtCarreras">Carreras</string>
    <string name="btnLoginText">Iniciar Sesión</string>
    <string name="btnCancelarText">Cancelar</string>
    <string name="loginIconDescription">Icono cotracosan login</string>
    <string name="hitUsuarioLogin">Usuario</string>
    <string name="hintContrasenia">Contraseña</string>
    <string name="menu_salir">Cerrar Sesión</string>
    <string name="btnCambiarImagen">boton para cambiar imagen del perfil</string>
    <string name="iconoUsuario">Icono de detalle usuario</string>
    <string name="lblSample">Nombre de usuario / correo</string>
    <string name="iconoCorreo">Icono para mostrar el detalle de correo</string>
    <string name="iconoContraseña">Icono para mostrar el cambio de contraseña</string>
    <string name="lblContraseña">Cambiar Contraseña</string>
    <string name="lblDetalleUsuario">Nombre de usuario:</string>
    <string name="lblCorreoDetalles">Correo Electronico:</string>
    <string name="avatar">Imagen del usuario</string>
    <string name="etContraseniaActual">Contraseña Actual</string>
    <string name="etNuevaContrasenia">Nueva Contraseña</string>
    <string name="etRepitaContrasenia">Repita Contraseña</string>
    <string name="btncambiarContrasenia">Cambiar Contraseña</string>
    <string name="title_activity_caja">CajaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sampleCodigoCredito">Codigo: XXXXXX</string>
    <string name="sampleFecha">Fecha: 23/07/2019</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="btnBuscarArticulo">Buscar Articulo</string>
    <string name="buscar">Buscar</string>
    <string name="listArticulosHeader">Articulos seleccionados</string>
    <string name="buscarCredito">Número de credito</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
