<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Buses"
            android:icon="@drawable/schoolbus"
            android:title="@string/txtBuses" />
        <item
            android:id="@+id/Carreras"
            android:icon="@drawable/map"
            android:title="@string/txtCarreras" />
        <item
            android:id="@+id/Creditos"
            android:icon="@drawable/cash"
            android:title="@string/txtCredito" />
        <item
            android:id="@+id/Abonos"
            android:icon="@drawable/piggybank"
            android:title="@string/txtAbonos" />
    </group>

    <item android:title="Consolidados">
        <menu>
            <item
                android:id="@+id/MontoFechas"
                android:icon="@drawable/diagram"
                android:title="Consolidado Carreras" />
            <item
                android:id="@+id/TodosCreditosBus"
                android:icon="@drawable/cash"
                android:title="Consolidado Credito Bus" />

            <item
                android:id="@+id/TodosAbonosSocio"
                android:icon="@drawable/piggybank"
                android:title="Consolidado Abonos"/>
            <item
                android:id="@+id/TodosCreditosPendientesSocio"
                android:icon="@drawable/cash"
                android:title="Consolidados Creditos Socios" />
        </menu>
    </item>

</menu>
