<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManager.ChangePasswordActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Contraseña Vieja -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/etContraseniaActual"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/etNuevaContrasenia"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/etNewMatchPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/etRepitaContrasenia"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCambiarContrasenia"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:drawableEnd="@android:drawable/stat_notify_sync"
                android:text="@string/btncambiarContrasenia"
                />
            <Button
                android:id="@+id/btnCancelarCambio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnCancelarText"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>