<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Creditos.Acciones.CreditosFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Primera fila -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvCodigoCredito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleCodigoCredito"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCreditoFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleFecha"
                    android:layout_marginStart="4dp"
                    android:padding="4dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <!-- Segunda Fila -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehiculo"
                    android:padding="4dp"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/spinnerVehiculos"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    style="@android:style/Theme.Holo.Dialog"/>
                <TextView
                    android:id="@+id/tvTotalCredito"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="textEnd"
                    android:text="C$ 0.0"/>
            </LinearLayout>
            <!-- Layout para la busqueda de articulos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp">

                    <EditText
                        android:id="@+id/etBuscarArticulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/btnBuscarArticulo"
                        android:imeOptions="actionSearch"

                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        tools:targetApi="o" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- Aqui se muestra el detalle de credito -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listArticulosHeader"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
            <!-- Fin del detalle -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/listaDetalles"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/cash"
        android:tooltipText="Efectuar Credito"/>
</android.support.design.widget.CoordinatorLayout>